fix payments table on small screens

--- a/src/pages/home/payments/payments_table/payments_table.module.scss
+++ b/src/pages/home/payments/payments_table/payments_table.module.scss
@@ -17,6 +17,10 @@
   td {
     white-space: nowrap;
   }
+
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .table td,
